--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,7 @@
 	"runArgs": [
 		"--init",
 		"--net", "host", 
-		"--gpus", "all"
+		"--gpus", "all",
         "-e", "DISPLAY=${env:DISPLAY}",
         "-v", "/tmp/.X11-unix:/tmp/.X11-unix"
 	],
